updating sql_queries and semi-ready etl notebook

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
+    "import numpy as np\n",
     "import psycopg2\n",
     "import pandas as pd\n",
     "from sql_queries import *"
@@ -23,7 +24,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete and Create all tables before re-running this ETL experiment\n",
+    "import create_tables\n",
+    "create_tables.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "# numpy datatypes registered into psycopg2\n",
+    "from psycopg2.extensions import register_adapter, AsIs\n",
+    "def addapt_numpy_float64(numpy_float64):\n",
+    "    return AsIs(numpy_float64)\n",
+    "def addapt_numpy_int64(numpy_int64):\n",
+    "    return AsIs(numpy_int64)\n",
+    "register_adapter(numpy.float64, addapt_numpy_float64)\n",
+    "register_adapter(numpy.int64, addapt_numpy_int64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,70 +92,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/song_data/A/A/A/TRAAARJ128F9320760.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/song_data/A/A/A/TRAAAMO128F1481E7F.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/song_data/A/A/A/TRAAAEF128F4273421.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/song_data/A/A/A/TRAAAFD128F92F423A.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/song_data/A/A/A/TRAAAMQ128F1460CD3.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/song_data/A/A/A/TRAAADZ128F9348C2E.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/song_data/A/A/A/TRAAAAW128F429D538.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/song_data/A/A/A/TRAAABD128F429CF47.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/song_data/A/A/A/TRAAAVG12903CFA543.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/song_data/A/A/A/TRAAAPK128E0786D96.json']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "song_files = "
+    "song_files = get_files(filepath='data/song_data/A/A/A')\n",
+    "song_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = "
+    "filepath = song_files[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_songs</th>\n",
+       "      <th>artist_id</th>\n",
+       "      <th>artist_latitude</th>\n",
+       "      <th>artist_longitude</th>\n",
+       "      <th>artist_location</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>song_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>AR8ZCNI1187B9A069B</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>Planet P Project</td>\n",
+       "      <td>SOIAZJW12AB01853F1</td>\n",
+       "      <td>Pink World</td>\n",
+       "      <td>269.81832</td>\n",
+       "      <td>1984</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   num_songs           artist_id  artist_latitude  artist_longitude  \\\n",
+       "0          1  AR8ZCNI1187B9A069B              NaN               NaN   \n",
+       "\n",
+       "  artist_location       artist_name             song_id       title  \\\n",
+       "0                  Planet P Project  SOIAZJW12AB01853F1  Pink World   \n",
+       "\n",
+       "    duration  year  \n",
+       "0  269.81832  1984  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = \n",
+    "df = pd.read_json(filepath, lines=True)\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## #1: `songs` Table\n",
-    "#### Extract Data for Songs Table\n",
-    "- Select columns for song ID, title, artist ID, year, and duration\n",
-    "- Use `df.values` to select just the values from the dataframe\n",
-    "- Index to select the first (only) record in the dataframe\n",
-    "- Convert the array to a list and set it to `song_data`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "song_data = \n",
-    "song_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Insert Record into Song Table\n",
-    "Implement the `song_table_insert` query in `sql_queries.py` and run the cell below to insert a record for this song into the `songs` table. Remember to run `create_tables.py` before running the cell below to ensure you've created/resetted the `songs` table in the sparkify database."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cur.execute(song_table_insert, song_data)\n",
-    "conn.commit()"
    ]
   },
   {
@@ -139,7 +217,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## #2: `artists` Table\n",
+    "## #1: `artists` Table\n",
+    "---\n",
+    "This table must be created first since it has no foreign key dependency.\n",
+    "\n",
     "#### Extract Data for Artists Table\n",
     "- Select columns for artist ID, name, location, latitude, and longitude\n",
     "- Use `df.values` to select just the values from the dataframe\n",
@@ -149,11 +230,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "artist_data = \n",
+    "# To keep data types consistent, first we will replace all np.nan and empty strings with None\n",
+    "\n",
+    "df.replace(to_replace=\"\", value=np.nan, inplace=True) # Replace empty strings with np.nan\n",
+    "df = df.where(cond=pd.notnull(df), other=None) # Replace np.nan for None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AR8ZCNI1187B9A069B', 'Planet P Project', None, None, None]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "artist_data = df.loc[0, [\"artist_id\",\n",
+    "                         \"artist_name\",\n",
+    "                         \"artist_location\",\n",
+    "                         \"artist_latitude\",\n",
+    "                         \"artist_longitude\"]].values\n",
+    "artist_data = list(artist_data)\n",
     "artist_data"
    ]
   },
@@ -167,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,6 +289,89 @@
    "metadata": {},
    "source": [
     "Run `test.ipynb` to see if you've successfully added a record to this table."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## #2: `songs` Table\n",
+    "#### Extract Data for Songs Table\n",
+    "- Select columns for song ID, title, artist ID, year, and duration\n",
+    "- Use `df.values` to select just the values from the dataframe\n",
+    "- Index to select the first (only) record in the dataframe\n",
+    "- Convert the array to a list and set it to `song_data`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SOIAZJW12AB01853F1', 'Pink World', 'AR8ZCNI1187B9A069B', 1984, 269.81832]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_data = df.loc[0, [\"song_id\", \"title\", \"artist_id\",  \"year\", \"duration\"]].values\n",
+    "song_data = list(song_data)\n",
+    "song_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Insert Record into Song Table\n",
+    "Implement the `song_table_insert` query in `sql_queries.py` and run the cell below to insert a record for this song into the `songs` table. Remember to run `create_tables.py` before running the cell below to ensure you've created/resetted the `songs` table in the sparkify database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(song_table_insert, song_data)\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wb/gitrepos/udacity_project_data_modeling_postgres/venv/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3445: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.exit()\n",
+    "\n",
+    "# cur.close()\n",
+    "# conn.close()"
    ]
   },
   {
@@ -426,9 +618,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -440,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
