intermediate commit, updating the etl notebook and changed some data tipes in sql_queries.py

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -344,37 +344,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/wb/gitrepos/udacity_project_data_modeling_postgres/venv/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3445: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "sys.exit()\n",
-    "\n",
-    "# cur.close()\n",
-    "# conn.close()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -389,30 +358,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-13-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-12-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-14-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-11-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-03-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-05-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-01-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-10-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-06-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-04-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-07-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-08-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-02-events.json',\n",
+       " '/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-09-events.json']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "log_files = "
+    "log_files = get_files(filepath='data/log_data/2018/11')\n",
+    "log_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/wb/gitrepos/udacity_project_data_modeling_postgres/data/log_data/2018/11/2018-11-13-events.json'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "filepath = "
+    "filepath = log_files[0]\n",
+    "filepath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist</th>\n",
+       "      <th>auth</th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>itemInSession</th>\n",
+       "      <th>lastName</th>\n",
+       "      <th>length</th>\n",
+       "      <th>level</th>\n",
+       "      <th>location</th>\n",
+       "      <th>method</th>\n",
+       "      <th>page</th>\n",
+       "      <th>registration</th>\n",
+       "      <th>sessionId</th>\n",
+       "      <th>song</th>\n",
+       "      <th>status</th>\n",
+       "      <th>ts</th>\n",
+       "      <th>userAgent</th>\n",
+       "      <th>userId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>Logged In</td>\n",
+       "      <td>Kevin</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Arellano</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Harrisburg-Carlisle, PA</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>1.540007e+12</td>\n",
+       "      <td>514</td>\n",
+       "      <td>None</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1542069417796</td>\n",
+       "      <td>\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fu</td>\n",
+       "      <td>Logged In</td>\n",
+       "      <td>Kevin</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Arellano</td>\n",
+       "      <td>280.05832</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Harrisburg-Carlisle, PA</td>\n",
+       "      <td>PUT</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1.540007e+12</td>\n",
+       "      <td>514</td>\n",
+       "      <td>Ja I Ty</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1542069637796</td>\n",
+       "      <td>\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>None</td>\n",
+       "      <td>Logged In</td>\n",
+       "      <td>Maia</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Burke</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Houston-The Woodlands-Sugar Land, TX</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>1.540677e+12</td>\n",
+       "      <td>510</td>\n",
+       "      <td>None</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1542071524796</td>\n",
+       "      <td>\"Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebK...</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>All Time Low</td>\n",
+       "      <td>Logged In</td>\n",
+       "      <td>Maia</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Burke</td>\n",
+       "      <td>177.84118</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Houston-The Woodlands-Sugar Land, TX</td>\n",
+       "      <td>PUT</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1.540677e+12</td>\n",
+       "      <td>510</td>\n",
+       "      <td>A Party Song (The Walk of Shame)</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1542071549796</td>\n",
+       "      <td>\"Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebK...</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nik &amp; Jay</td>\n",
+       "      <td>Logged In</td>\n",
+       "      <td>Wyatt</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Scott</td>\n",
+       "      <td>196.51873</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Eureka-Arcata-Fortuna, CA</td>\n",
+       "      <td>PUT</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1.540872e+12</td>\n",
+       "      <td>379</td>\n",
+       "      <td>Pop-Pop!</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1542079142796</td>\n",
+       "      <td>Mozilla/5.0 (Windows NT 6.1; WOW64; Trident/7....</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         artist       auth firstName gender  itemInSession  lastName  \\\n",
+       "0          None  Logged In     Kevin      M              0  Arellano   \n",
+       "1            Fu  Logged In     Kevin      M              1  Arellano   \n",
+       "2          None  Logged In      Maia      F              0     Burke   \n",
+       "3  All Time Low  Logged In      Maia      F              1     Burke   \n",
+       "4     Nik & Jay  Logged In     Wyatt      M              0     Scott   \n",
+       "\n",
+       "      length level                              location method      page  \\\n",
+       "0        NaN  free               Harrisburg-Carlisle, PA    GET      Home   \n",
+       "1  280.05832  free               Harrisburg-Carlisle, PA    PUT  NextSong   \n",
+       "2        NaN  free  Houston-The Woodlands-Sugar Land, TX    GET      Home   \n",
+       "3  177.84118  free  Houston-The Woodlands-Sugar Land, TX    PUT  NextSong   \n",
+       "4  196.51873  free             Eureka-Arcata-Fortuna, CA    PUT  NextSong   \n",
+       "\n",
+       "   registration  sessionId                              song  status  \\\n",
+       "0  1.540007e+12        514                              None     200   \n",
+       "1  1.540007e+12        514                           Ja I Ty     200   \n",
+       "2  1.540677e+12        510                              None     200   \n",
+       "3  1.540677e+12        510  A Party Song (The Walk of Shame)     200   \n",
+       "4  1.540872e+12        379                          Pop-Pop!     200   \n",
+       "\n",
+       "              ts                                          userAgent userId  \n",
+       "0  1542069417796  \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...     66  \n",
+       "1  1542069637796  \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...     66  \n",
+       "2  1542071524796  \"Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebK...     51  \n",
+       "3  1542071549796  \"Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebK...     51  \n",
+       "4  1542079142796  Mozilla/5.0 (Windows NT 6.1; WOW64; Trident/7....      9  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = \n",
-    "df.head()"
+    "df_log = pd.read_json(filepath, lines=True)\n",
+    "df_log.head()"
    ]
   },
   {
@@ -432,41 +624,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = \n",
-    "df.head()"
+    "# To keep data types consistent, first we will replace all np.nan and empty strings with None\n",
+    "\n",
+    "df_log.replace(to_replace=\"\", value=np.nan, inplace=True) # Replace empty strings with np.nan\n",
+    "df_log = df_log.where(cond=pd.notnull(df_log), other=None) # Replace np.nan for None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>day</th>\n",
+       "      <th>week</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-11-13 00:40:37.796</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>46</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-11-13 01:12:29.796</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>46</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-11-13 03:19:02.796</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>46</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-11-13 03:51:52.796</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>46</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-11-13 05:00:06.796</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>46</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               start_time  hour  day  week  month  year  weekday\n",
+       "0 2018-11-13 00:40:37.796     0   13    46     11  2018        1\n",
+       "1 2018-11-13 01:12:29.796     1   13    46     11  2018        1\n",
+       "2 2018-11-13 03:19:02.796     3   13    46     11  2018        1\n",
+       "3 2018-11-13 03:51:52.796     3   13    46     11  2018        1\n",
+       "4 2018-11-13 05:00:06.796     5   13    46     11  2018        1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "t = \n",
-    "t.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time_data = ()\n",
-    "column_labels = ()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time_df = \n",
+    "# Filtering records by NextSong action\n",
+    "df_log = df_log[df_log[\"page\"]==\"NextSong\"]\n",
+    "\n",
+    "timestamp = pd.to_datetime(df_log[\"ts\"], unit='ms').values\n",
+    "hour = pd.to_datetime(df_log[\"ts\"], unit='ms').dt.hour.values\n",
+    "day = pd.to_datetime(df_log[\"ts\"], unit='ms').dt.day.values\n",
+    "week = pd.to_datetime(df_log[\"ts\"], unit='ms').dt.isocalendar().week.values\n",
+    "month = pd.to_datetime(df_log[\"ts\"], unit='ms').dt.month.values\n",
+    "year = pd.to_datetime(df_log[\"ts\"], unit='ms').dt.year.values\n",
+    "weekday = pd.to_datetime(df_log[\"ts\"], unit='ms').dt.weekday.values\n",
+    "\n",
+    "column_labels = (\"start_time\", \"hour\", \"day\", \"week\", \"month\", \"year\", \"weekday\")\n",
+    "time_data = (timestamp, hour, day, week, month, year, weekday)\n",
+    "\n",
+    "time_df = pd.DataFrame(dict(zip(column_labels, time_data)))\n",
     "time_df.head()"
    ]
   },
@@ -480,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,11 +794,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>lastName</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>66</td>\n",
+       "      <td>Kevin</td>\n",
+       "      <td>Arellano</td>\n",
+       "      <td>M</td>\n",
+       "      <td>free</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  userId firstName  lastName gender level\n",
+       "1     66     Kevin  Arellano      M  free"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "user_df = "
+    "user_df = df_log[[\"userId\", \"firstName\", \"lastName\", \"gender\", \"level\"]].drop_duplicates(subset=\"userId\")\n",
+    "user_df.head(1)"
    ]
   },
   {
@@ -524,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,6 +891,37 @@
     "\n",
     "#### Insert Records into Songplays Table\n",
     "- Implement the `songplay_table_insert` query and run the cell below to insert records for the songplay actions in this log file into the `songplays` table. Remember to run `create_tables.py` before running the cell below to ensure you've created/resetted the `songplays` table in the sparkify database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wb/gitrepos/udacity_project_data_modeling_postgres/venv/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3445: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.exit()\n",
+    "\n",
+    "# cur.close()\n",
+    "# conn.close()"
    ]
   },
   {
